# deepagents-azure-blob-backend

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  lefthook.yml  pyproject.toml  release-please-config.json
.claude/: CLAUDE.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autofix.ci.yml  autofix.yml  ci.yml  docs.yml  publish.yml  release-please.yml
docs/plans/: PLAN-2026-03-06.md  PLAN.md
examples/: README.md  basic_agent.py  composite_with_memories.py  pyproject.toml
src/deepagents_azure_blob_backend/: __init__.py  _path.py  _utils.py  backend.py  config.py
tests/: conftest.py  test_backend_integration.py  test_backend_unit.py
tests/integration_tests/: test_backend_contract.py
tests/unit_tests/: test_backend.py
