[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "deepagents-azure-blob-backend"
version = "0.1.0"
description = "Azure Blob Storage filesystem backend for LangChain Deep Agents"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
keywords = ["langchain", "deepagents", "azure", "blob-storage", "agent", "backend", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "deepagents>=0.4.0",
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.urls]
Homepage = "https://github.com/oddrationale/deepagents-azure-blob-backend"
Repository = "https://github.com/oddrationale/deepagents-azure-blob-backend"
Issues = "https://github.com/oddrationale/deepagents-azure-blob-backend/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: no I/O required",
    "integration: requires Azurite",
]

[tool.ty.src]
include = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
