[project]
name = "deepagents-azure-blob-backend"
version = "0.2.0"
description = "Azure Blob Storage filesystem backend for LangChain Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["langchain", "deepagents", "azure", "blob-storage", "agent", "backend", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "deepagents>=0.4.0",
    "azure-storage-blob[aio]>=12.0.0",
    "azure-identity>=1.0.0",
    "wcmatch",
    # Security floors for transitive runtime dependencies with known patched versions.
    "aiohttp>=3.13.4",
    "cryptography>=46.0.7",
    "langchain-core>=1.2.28",
    "langsmith>=0.7.31",
    "pyjwt>=2.12.0",
    "requests>=2.33.0",
]

[project.urls]
Homepage = "https://github.com/oddrationale/deepagents-azure-blob-backend"
Documentation = "https://oddrationale.github.io/deepagents-azure-blob-backend"
Repository = "https://github.com/oddrationale/deepagents-azure-blob-backend"
Issues = "https://github.com/oddrationale/deepagents-azure-blob-backend/issues"

[build-system]
requires = ["uv_build>=0.8.17,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pdoc",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: no I/O required",
    "integration: requires Azurite",
]

[tool.ty.src]
include = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
